k8s/stage/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: stage-kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:latest  # 官方 Konga 鏡像
        ports:
        - containerPort: 1337      # Konga 的默認端口
