k8s/stage/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: stage-kong
spec:
  selector:
    app: kong
  ports:
  - name: http
    port: 80
    targetPort: 8000
  - name: https
    port: 443
    targetPort: 8443
  type: LoadBalancer  # 暴露給外部
