k8s/stage/konga-serrvice.yaml
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: stage-kong
spec:
  type: ClusterIP
  selector:
    app: konga
  ports:
  - name: konga
    port: 1337
    targetPort: 1337
    protocol: TCP
